[gd_scene load_steps=6 format=3 uid="uid://cf77hffnhnawg"]

[ext_resource type="Script" path="res://scripts/equip_slot_setting.gd" id="1_fl014"]
[ext_resource type="Texture2D" uid="uid://dyfabdpg87qmi" path="res://icons/Add.svg" id="2_j41tu"]
[ext_resource type="Texture2D" uid="uid://cnugbxt2isuwr" path="res://icons/ArrowUp.svg" id="3_t31rw"]
[ext_resource type="Texture2D" uid="uid://lxjbwqi3shqm" path="res://icons/ArrowDown.svg" id="4_joyqv"]
[ext_resource type="Texture2D" uid="uid://ec1r4074qwp8" path="res://icons/Close.svg" id="5_amtbh"]

[node name="EquipSlotSetting" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 86.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_fl014")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SlotName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Slot_name"

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_j41tu")

[node name="MoveUpButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_t31rw")

[node name="MoveDownButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_joyqv")

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_amtbh")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="FlowContainer" type="FlowContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/FlowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/FlowContainer/HBoxContainer"]
layout_mode = 2
text = " Background Image: "

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/FlowContainer/HBoxContainer"]
layout_mode = 2

[node name="ImageTextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer/FlowContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/FlowContainer/HBoxContainer2"]
layout_mode = 2
text = " Categories: "

[node name="CategoriesLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/FlowContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "weapons, armor, ring, cloak"

[node name="TokenImageFileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(400, 400)
always_on_top = true
ok_button_text = "Open"
file_mode = 0
show_hidden_files = true

[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/SlotName" to="." method="_on_slot_name_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/SlotName" to="." method="_on_slot_name_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MoveUpButton" to="." method="_on_move_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MoveDownButton" to="." method="_on_move_down_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/FlowContainer/HBoxContainer/PanelContainer/ImageTextureButton" to="." method="_on_image_texture_button_pressed"]
[connection signal="focus_exited" from="VBoxContainer/MarginContainer/FlowContainer/HBoxContainer2/CategoriesLineEdit" to="." method="_on_categories_line_edit_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/MarginContainer/FlowContainer/HBoxContainer2/CategoriesLineEdit" to="." method="_on_categories_line_edit_text_submitted"]
[connection signal="file_selected" from="TokenImageFileDialog" to="." method="_on_token_image_file_dialog_file_selected"]
